Refactor/prefer the java standard library instead of guava (#2206)
* refactor: Prefer the Java standard library instead of Guava

Use this link to re-run the recipe: https://public.moderne.io/recipes/org.openrewrite.java.migrate.guava.NoGuava

Co-authored-by: Moderne <team@moderne.io>

* Revert changes involving Suppliers.memoize

* Replace com.google.common.base.Objects with java.util.Objects

* Apply spotless

* Replace ImmutableMap with Map in tests

* Replace Functions with Lambdas in StringValuePatternTest

* Fix comparison after order change with Set

* Remove unnecessary throws

* Update src/test/java/com/github/tomakehurst/wiremock/matching/StringValuePatternTest.java

* Apply spotless

---------

Co-authored-by: Moderne <team@moderne.io>
Co-authored-by: Tom Akehurst <t.m.akehurst@googlemail.com>